# quadrotor_vision_landing

./: CMakeLists.txt  PID.py  README.md  api.py  package.xml  requirements.txt  setup.py
autoland/: CMakeLists.txt  package.xml
autoland/scripts/: autoland.py  desired_velocity_publisher.py  fly_left_right.py  helipad_detector_check.py  kalman_filter.py  test_PID.py
path_planning/: CMakeLists.txt  package.xml
path_planning/scripts/: sweep.py
quadrotor_vision_landing/: CMakeLists.txt  package.xml  setup.py
quadrotor_vision_landing/src/quadrotor_vision_landing/: computer_vision.py  control.py  px4.py
src/quadrotor_vision_landing/: api.py  computer_vision.py  control.py  pid.py  px4.py
