<?xml version="1.0"?>
<package format="2">
  <name>quadrotor_vision_landing</name>
  <version>0.0.0</version>
  <description>The quadrotor_vision_landing package</description>
  
  <maintainer email="ewan@todo.todo">ewan</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>mavros_msgs</build_depend>
  <build_depend>rospy</build_depend>
  
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>mavros_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>

</package>
